fix: quranword is cut on safari (#1089)
* fix: quranword is cut on safari

* add display inline-block for default safe fallback.

--- a/src/components/dls/Popover/Popover.module.scss
+++ b/src/components/dls/Popover/Popover.module.scss
@@ -7,6 +7,7 @@
 
 .trigger {
   all: unset;
+  display: inline-block;
 }
 
 .content {
