--- a/src/components/dls/Tooltip/Tooltip.module.scss
+++ b/src/components/dls/Tooltip/Tooltip.module.scss
@@ -1,5 +1,6 @@
 .trigger {
   all: unset;
+  display: inline-block;
 }
 
 .content {
